--- a/templates/index.html
+++ b/templates/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <title>{{title}}</title>
 </head>
 <body>
-    <button onclick="shuffle()" class="btn btn-primary">shuffle</button>
-    <button onclick="pause_all()" class="btn btn-secondary">pause</button>
-    <button onclick="play_current()" class="btn btn-success">play</button>
-    <button onclick="skip()" class="btn btn-warning">skip</button>
-    {{ body | safe }}
+    <div class="container">
+        <button onclick="shuffle()" class="btn btn-primary">shuffle</button>
+        <button onclick="pause_all()" class="btn btn-secondary">pause</button>
+        <button onclick="play_current()" class="btn btn-success">play</button>
+        <button onclick="skip()" class="btn btn-warning">skip</button>
+        {{ body | safe }}
+    </div>      
 </body>
 <script>
 
@@ -73,16 +76,10 @@
     }
 </script>
 <style>
-    /* .audio_label {
-        display: flex;
-        justify-content: end;
+    body {
+        padding: 0px;
+        border: 0px;
+        margin: 0px;
     }
-    a {
-        text-decoration: none;
-        color: white;
-        background-color: blue;
-        padding: 3px;
-        border-radius: 5px;
-    } */
 </style>
 </html>
