--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <svg id="waves_left" viewBox="0 0 675 1800" width="675" height="1800" xmlns="http://www.w3.org/2000/svg"
                 xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-                <rect class="left_draw" x="0" y="0" width="675" height="1800" fill="#000000"></rect>
+                <!-- <rect class="left_draw" x="0" y="0" width="675" height="1800" fill="#000000"></rect> -->
                 <path class="left_draw"
                     d="M556 0L411 0L411 78L467 78L467 157L411 157L411 235L565 235L565 313L521 313L521 391L543 391L543 470L344 470L344 548L441 548L441 626L666 626L666 704L544 704L544 783L457 783L457 861L646 861L646 939L599 939L599 1017L452 1017L452 1096L478 1096L478 1174L435 1174L435 1252L364 1252L364 1330L394 1330L394 1409L342 1409L342 1487L605 1487L605 1565L519 1565L519 1643L616 1643L616 1722L370 1722L370 1800L0 1800L0 1722L0 1722L0 1643L0 1643L0 1565L0 1565L0 1487L0 1487L0 1409L0 1409L0 1330L0 1330L0 1252L0 1252L0 1174L0 1174L0 1096L0 1096L0 1017L0 1017L0 939L0 939L0 861L0 861L0 783L0 783L0 704L0 704L0 626L0 626L0 548L0 548L0 470L0 470L0 391L0 391L0 313L0 313L0 235L0 235L0 157L0 157L0 78L0 78L0 0L0 0Z"
                     fill="#09e570"></path>
@@ -24,7 +24,7 @@
             </svg>
     <svg id="waves_right" viewBox="0 0 675 1800" width="675" height="1800" xmlns="http://www.w3.org/2000/svg"
             xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-            <rect x="0" y="0" width="675" height="1800" fill="#000000"></rect>
+            <!-- <rect x="0" y="0" width="675" height="1800" fill="#000000"></rect> -->
             <path
                 d="M248 1800L222 1800L222 1722L115 1722L115 1643L115 1643L115 1565L312 1565L312 1487L268 1487L268 1409L252 1409L252 1330L326 1330L326 1252L293 1252L293 1174L235 1174L235 1096L78 1096L78 1017L218 1017L218 939L98 939L98 861L187 861L187 783L268 783L268 704L200 704L200 626L313 626L313 548L29 548L29 470L59 470L59 391L231 391L231 313L86 313L86 235L70 235L70 157L34 157L34 78L141 78L141 0L675 0L675 78L675 78L675 157L675 157L675 235L675 235L675 313L675 313L675 391L675 391L675 470L675 470L675 548L675 548L675 626L675 626L675 704L675 704L675 783L675 783L675 861L675 861L675 939L675 939L675 1017L675 1017L675 1096L675 1096L675 1174L675 1174L675 1252L675 1252L675 1330L675 1330L675 1409L675 1409L675 1487L675 1487L675 1565L675 1565L675 1643L675 1643L675 1722L675 1722L675 1800L675 1800Z"
                 fill="#09e570"></path>
@@ -40,7 +40,7 @@
         <div class="col-4">
             
         </div>
-        <div class="col-4">
+        <div class="col-4 d-flex justify-content-center">
             <div class="container1">
                 <div id="media_controls">
                     <button onclick="shuffle()" class="btn btn-primary">shuffle</button>
@@ -192,6 +192,9 @@
         height: 100%;
         /* width: 100%; */
     }
+    /* .container1 {
+        width: 100%;
+    } */
 </style>
 
 </html>
