--- a/templates/index.html
+++ b/templates/index.html
@@ -129,8 +129,11 @@
 
     all_players.forEach(element => {
         element.addEventListener("play", (event) => {
+            element.style.background="white";
+            document.getElementById("currentsong").innerText = `playing: ${element.parentElement.previousSibling.innerText}`
             all_players.forEach(aplayer => {
                 if (aplayer != element) {
+                    aplayer.style.background="black";
                     aplayer.pause()
                     aplayer.currentTime = 0
                 }
