--- a/templates/index.html
+++ b/templates/index.html
@@ -195,6 +195,9 @@
         height: 100%;
         /* width: 100%; */
     }
+    img {
+        height: 60px;
+    }
     /* .container1 {
         width: 100%;
     } */
